syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;

message ClientRequest {
    int64 firstValue = 1;
    int64 lastValue = 2;
}

message SequenceResponse {
    int64 value = 1;
}

message Empty {}

service SequenceGenerator {
    rpc generate(ClientRequest) returns(stream SequenceResponse);
}